--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,8 @@
+ 
+ .web {
+    overflow: hidden;
+ }
+
  .header {
     height: var(--header-height);
     background-image: linear-gradient(0, #fe6433, #f53e2d);
@@ -7,6 +12,96 @@
     display: flex;
     justify-content: space-between;
  }
+
+.navbar-btn {
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    color: var(--white-color);
+    display: none;
+    margin: 13px 0px 0 8px;
+}
+
+.nav__overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 1;
+    display: none;
+    animation: fadeIn linear 0.2s;
+}
+
+.nav__mobile {
+    position: fixed;
+    top: var(--header-height);
+    left: 0;
+    bottom: 0;
+    width: 200px;
+    max-width: 100%;
+    background-color: #fff;
+    z-index: 3;
+    transform: translateX(-100%);
+    opacity: 0;
+    transition: transform linear 0.2s, opacity linear 0.2s;
+}
+
+.nav__mobile-list {
+    padding: 0 0 8px 2px;
+    list-style: none;
+}
+
+.nav__mobile-item {
+    position: relative;
+    padding: 8px 0;
+}
+
+.nav__mobile-item:first-child::before {
+    display: none;
+}
+
+.nav__mobile-item::before {
+    content: "";
+    border-top: 1px solid #E1E1E1;
+    position: absolute;
+    top: 0;
+    left: 10px;
+    right: 50px;
+}
+
+.nav__mobile-link {
+    position: relative;
+    text-decoration: none;
+    color: #333;
+    padding: 4px 4px;
+    font-size: 1.4rem;
+}
+
+.nav__mobile-close {
+    width: 15px;
+    height: 15px;
+    color: #666;
+    position: absolute;
+    top: 0.6rem;
+    right: 1rem;
+    z-index: 1;
+}
+
+.nav__input {
+    display: none;
+}
+
+.nav__input:checked ~ .nav__overlay {
+    display: block;
+}
+
+.nav__input:checked ~ .nav__mobile {
+    transform: translateX(0%);
+    opacity: 1;
+}
+
 
  .header__navbar-list {
      list-style: none;
@@ -471,6 +566,17 @@
     margin: 0 8px;
 }
 
+.header__mobile-search {
+    margin-left: 35px;
+    display: none;
+}
+
+.header__mobile-search-icon {
+    font-size: 2.6rem;
+    color: var(--white-color);
+}
+
+
 .header__logo {
     width: 200px;
 }
@@ -478,6 +584,12 @@
 .header__logo-link {
     text-decoration: none;
     color: transparent;
+    display: block;
+    line-height: 0;
+}
+
+.header__search-checkbox:checked ~ .header__search {
+    display: flex;
 }
 
 .header__logo-img {
@@ -494,8 +606,9 @@
 }
 
 .header__cart {
-    width: 84px;
-    text-align: center;
+    width: 80px;
+    text-align: right;
+    margin: 10px;
 }
 
 .header__cart-wrap {
@@ -503,6 +616,7 @@
     display: inline-block;
     padding: 0 12px;
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .header__cart-icon {
@@ -819,7 +933,7 @@
     box-shadow: 0 1px 5px rgba(189, 189, 189);
     display: none;  
     overflow: hidden;
-    z-index: 1;
+    z-index: 2;
 }
 
 .header__search-history-heading {
@@ -851,6 +965,56 @@
     color: var(--text-color);
     line-height: 38px;
     display: block;
+}
+
+/* Header sort bar */
+
+.header__sort-bar {
+    position: fixed;
+    top: var(--header-height);
+    left: 0;
+    right: 0;
+    height: var(--header-sort-bar);
+    background-color: var(--white-color);
+    list-style: none;
+    margin: 0;
+    padding-left: 0;
+    border-top: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;
+    display: none;
+}
+
+.header__sort-item {
+    flex: 1;
+}
+
+.header__sort-link {
+    text-decoration: none;
+    color: var(--text-color);
+    font-size: 1.4rem;
+    display: block;
+    height: 100%;
+    line-height: var(--header-sort-bar);
+    text-align: center;
+    position: relative;
+}
+
+.header__sort-link::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    height: 60%;
+    border-left: 1px solid #e5e5e5;
+    transform: translateY(-50%);
+}
+
+.header__sort-item--active .header__sort-link {
+    color: var(--primary-color);
+}
+
+.header__sort-item:first-child .header__sort-link::before {
+    display: none;
 }
 
 /* Web container */
@@ -912,6 +1076,63 @@
 
 .category-item__link:hover {
     color: var(--primary-color);
+}
+
+/* Mobile category */
+
+.mobile-category {
+    display: none;
+}
+
+.mobile-category__list {
+    display: flex;
+    list-style: none;
+    padding-left: 0;
+    max-width: 100%;
+    overflow-x: auto;
+}
+
+.mobile-category__list::-webkit-scrollbar {
+    display: none;
+}
+
+.mobile-category__item {
+    flex-shrink: 0;
+    margin-right: 10px;
+}
+
+.mobile-category__item:nth-of-type(3n + 1) .mobile-category__link {
+    background-color: #87AFD8;
+}
+
+.mobile-category__item:nth-of-type(3n + 2) .mobile-category__link {
+    background-color: #76C9BD;
+}
+
+.mobile-category__item:nth-of-type(3n + 3) .mobile-category__link {
+    background-color: #88CF81;
+}
+
+.mobile-category__link {
+    --line-height: 2rem;
+    text-decoration: none;
+    color: var(--text-color);
+    font-size: 1.4rem;
+    height: calc(var(--line-height)*2);
+    line-height: var(--line-height);
+    overflow: hidden;
+    text-align: center;
+    width: 110px;
+    display: block;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    border-radius: 5px;
+    font-weight: 300;
+    user-select: none;
+    -webkit-user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    padding: 0 6px;
 }
 
 /* Home sort + filter */
@@ -1174,6 +1395,7 @@ i.home-product-item__like-icon-fill {
 
 .home-product__pagination {
     margin: 48px 0 32px 0;
+    padding-left: 0;
 }
 
 .home-product-item__sale-off-label {
